src/objects/Employee_Review__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Project_Codes__c</fullName>
        <inlineHelpText>Enter additional project code separated by line feeds</inlineHelpText>
        <label>Additional Project Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Degree_of_Contact__c</fullName>
        <label>Degree of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Minimal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee ID</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Reviews</relationshipLabel>
        <relationshipName>Employee_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Employee_ID__r.First_Name__c + &apos; &apos; +  Employee_ID__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Employee_ID__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>Employee_ID__r.Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <formula>Employee_ID__r.Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interim or mid­cycle review for a long term project?</description>
        <inlineHelpText>Interim or mid­cycle review for a long term project?</inlineHelpText>
        <label>Interim Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Employee_ID__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>1st Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Half</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectRatings__c</fullName>
        <formula>&quot;0,1,2,3,4,5,6,7,8,9&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectRatings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Hours__c</fullName>
        <formula>Employee_ID__r.Project_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Employee_ID__r.Project_Name__c + &quot;(&quot; +  Employee_ID__r.Project_Number__c +&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Date__c</fullName>
        <formula>Employee_ID__r.Rank_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating_10__c</fullName>
        <label>Rating 10</label>
        <picklist>
            <controllingField>Review_Type__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_11__c</fullName>
        <label>Rating 11</label>
        <picklist>
            <controllingField>Review_Type__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_1__c</fullName>
        <label>Rating 1</label>
        <picklist>
            <controllingField>Review_Type__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rev_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Project Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <formula>(value(text(Rating_1__c)) + value(text(Rating_2__c)) + value(text(Rating_3__c)) + value(text(Rating_4__c)) + value(text(Rating_5__c)) + value(text(Rating_6__c)) + value(text(Rating_7__c)) + value(text(Rating_8__c)) + value(text(Rating_9__c)) + value(text(Rating_10__c)) + value(text(Rating_11__c)))/(if(text(Rating_1__c)=&quot;0&quot;,0,1)+if(text(Rating_2__c)=&quot;0&quot;,0,1)+if(text(Rating_3__c)=&quot;0&quot;,0,1)+if(text(Rating_4__c)=&quot;0&quot;,0,1)+if(text(Rating_5__c)=&quot;0&quot;,0,1)+if(text(Rating_6__c)=&quot;0&quot;,0,1)+if(text(Rating_7__c)=&quot;0&quot;,0,1)+if(text(Rating_8__c)=&quot;0&quot;,0,1)+if(text(Rating_9__c)=&quot;0&quot;,0,1)+if(text(Rating_10__c)=&quot;0&quot;,0,1)+if(text(Rating_11__c)=&quot;0&quot;,0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employee Review</label>
    <listViews>
        <fullName>Employee_Reviews_view</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Employee Reviews</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Employee Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>